--- a/judge.toml
+++ b/judge.toml
@@ -3,5 +3,5 @@
 image = { source = "dockerfile", path = ".", tag = "pascal-lex-example"}
 
 run = [
-    "./program $input -o $asm",
+    "./c0 $input -o $asm",
 ]
